--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,8 @@
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "frontend/build",
-        "buildCommand": "cd frontend && npm install && npx react-scripts build"
+        "distDir": "build",
+        "buildCommand": "npm install && npx react-scripts build"
       }
     },
     {
