--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,8 @@
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "frontend/build",
-        "buildCommand": "npm install --prefix frontend && chmod +x frontend/node_modules/.bin/react-scripts && npm run build --prefix frontend"
+        "buildCommand": "npm install --prefix frontend && npx --prefix frontend react-scripts build",
+        "distDir": "frontend/build"
       }
     },
     {
@@ -15,7 +15,7 @@
     }
   ],
   "routes": [
-    { "src": "/chat", "methods": ["POST"],  "dest": "backend/main.py" },
-    { "src": "/(.*)",                   "dest": "frontend/build/$1" }
+    { "src": "/chat", "methods": ["POST"], "dest": "backend/main.py" },
+    { "src": "/(.*)",                    "dest": "frontend/build/$1" }
   ]
 }
