--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,28 @@
 {
   "version": 2,
   "builds": [
-    { "src": "frontend/build/**", "use": "@vercel/static" },
-    { "src": "backend/main.py",    "use": "@vercel/python" }
+    {
+      "src": "frontend/package.json",
+      "use": "@vercel/node",
+      "config": {
+        "buildCommand": "cd frontend && npm install && npm run build",
+        "outputDirectory": "frontend/build"
+      }
+    },
+    {
+      "src": "backend/main.py",
+      "use": "@vercel/python"
+    }
   ],
   "routes": [
-    { "src": "/chat", "methods": ["POST"], "dest": "backend/main.py" },
-    { "src": "/(.*)", "dest": "frontend/build/$1" }
+    {
+      "src": "/chat",
+      "methods": ["POST"],
+      "dest": "backend/main.py"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "frontend/build/$1"
+    }
   ]
 }
